--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 <h2><span class="cem">Decentralized Semantic Publishing with Nanopublications</span></h2>
 <p>
 <strong>Tobias Kuhn</strong><br>
+<small>
 VU University Amsterdam
 <br>
-<small><a href="http://www.tkuhn.org">http://www.tkuhn.org</a></small>
+<a href="http://www.tkuhn.org">http://www.tkuhn.org</a></small>
 </p>
+<p>Decentralised Web Symposium, 17 January 2020</p>
 <small>
-<p>Decentralised Web Symposium, Vienna University, 17 January 2020</p>
-<p>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a></p>
+<p>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></p>
 </small>
 </section>
 
