--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@ VU University Amsterdam
 <a href="http://www.tkuhn.org">http://www.tkuhn.org</a></small>
 </p>
 <p>Decentralised Web Symposium, 17 January 2020</p>
-<small>
-<p>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
-More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></p>
-</small>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section>
+<h3>Nanopublications</h3>
+<img class="plain stretch" src="img/nanopub.svg"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="slide-in">
+<h3>Nanopublication Example</h3>
+<img class="plain stretch" src="img/nanopub-example.png"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
 </div>
