--- a/index.html
+++ b/index.html
@@ -21,21 +21,28 @@ VU University Amsterdam
 </p>
 <p>Decentralised Web Symposium, 17 January 2020</p>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
-More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
 <section>
 <h3>Nanopublications</h3>
 <img class="plain stretch" src="img/nanopub.svg"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
-More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
 <section data-transition="slide-in">
 <h3>Nanopublication Example</h3>
 <img class="plain stretch" src="img/nanopub-example.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
-More about nanopublications: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="slide-in">
+<h3>Nanopublication Example, Signed</h3>
+<img class="plain stretch" src="img/nanopub-example-signed.png"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
 </div>
