--- a/index.html
+++ b/index.html
@@ -25,24 +25,52 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 </section>
 
 <section>
-<h3>Nanopublications</h3>
+<h3>Decentralized + Semantic:<br>Make it Nano-Size</h3>
+<img class="plain stretch" src="img/db-nano.svg"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section>
+<h3>Nanopublications:<br>Small Linked Data Containers</h3>
 <img class="plain stretch" src="img/nanopub.svg"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
 <section data-transition="slide-in">
-<h3>Nanopublication Example</h3>
+<h3>Making a Semantic Statement</h3>
 <img class="plain stretch" src="img/nanopub-example.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
 <section data-transition="slide-in">
-<h3>Nanopublication Example, Signed</h3>
+<h3>Signing the Nanopublication</h3>
 <img class="plain stretch" src="img/nanopub-example-signed.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="slide-in">
+<h3>Decentralized Publishing</h3>
+<img class="plain stretch" src="img/npmonitor.png"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="slide-in">
+<h3>Decentralized Querying</h3>
+<img class="plain stretch" src="img/nanosearch.png"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section>
+<h3>Thank you for Your Attention!</h3>
+<br>
+<p>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></p>
 </section>
 
 </div>
