--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 
 <section data-transition="slide-in">
 <h3>Decentralized Services</h3>
-<img class="plain stretch" src="img/services.svg"/>
+<img class="plain stretch" src="img/services.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
 <section data-transition="slide-in">
 <h3>Decentralized Querying</h3>
-<img class="plain stretch" src="img/querying.svg"/>
+<img class="plain stretch" src="img/querying.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
