--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 </section>
 
 <section>
-<h3>Decentralized + Semantic:<br>Make it Nano-Size</h3>
+<h3>Decentralized + Semantic:<br>Make Small Pieces of Data</h3>
 <img class="plain stretch" src="img/db-nano.svg"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
@@ -39,7 +39,21 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 </section>
 
 <section data-transition="slide-in">
-<h3>Making a Semantic Statement</h3>
+<h3>Making a Nano Statement</h3>
+<img class="plain stretch" src="img/nanopub-example0.png"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="none">
+<h3>Making a Nano Statement</h3>
+<img class="plain stretch" src="img/nanopub-example1.png"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="none">
+<h3>Making a Nano Statement</h3>
 <img class="plain stretch" src="img/nanopub-example.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
@@ -74,10 +88,13 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 </section>
 
 <section>
-<h3>Thank you for Your Attention!</h3>
+<h3><span class="cem">Thank you for Your Attention!</span></h3>
 <br>
-<p>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
-Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></p>
+<p>These slides:<br>
+<a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a></p>
+<p>
+Further links:<br>
+<a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></p>
 </section>
 
 </div>
