--- a/index.html
+++ b/index.html
@@ -59,29 +59,29 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
-<section data-transition="slide-in">
+<section>
 <h3>Signing the Nanopublication</h3>
-<img class="plain stretch" src="img/nanopub-example-signed.png"/>
+<img class="plain stretch" src="img/nanopub-example-signed-x.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
-<section data-transition="slide-in">
-<h3>Decentralized Publishing</h3>
+<section>
+<h3>Decentralized Semantic Publishing</h3>
 <img class="plain stretch" src="img/npmonitor.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
-<section data-transition="slide-in">
-<h3>Decentralized Services</h3>
+<section>
+<h3>Decentralized Semantic API</h3>
 <img class="plain stretch" src="img/services.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
-<section data-transition="slide-in">
-<h3>Decentralized Querying</h3>
+<section>
+<h3>Decentralized Semantic Querying</h3>
 <img class="plain stretch" src="img/querying.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
