--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 
 <section>
 <h3>Decentralized Semantic Publishing</h3>
+<p>(currently 10M+ nanopublications)</p>
 <img class="plain stretch" src="img/npmonitor.png"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
@@ -83,6 +84,13 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 <section>
 <h3>Decentralized Semantic Querying</h3>
 <img class="plain stretch" src="img/querying.png"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section>
+<h3>Open and Reliable</h3>
+<img class="plain stretch" src="img/people.svg"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
