--- a/index.html
+++ b/index.html
@@ -88,8 +88,36 @@ Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/l
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
 </section>
 
-<section>
-<h3>Open and Reliable</h3>
+<section data-transition="slide-in">
+<h3>Versatile, Open, and Reliable</h3>
+<img class="plain stretch" src="img/people0.svg"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="none">
+<h3>Versatile, Open, and Reliable</h3>
+<img class="plain stretch" src="img/people1.svg"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="none">
+<h3>Versatile, Open, and Reliable</h3>
+<img class="plain stretch" src="img/people2.svg"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="none">
+<h3>Versatile, Open, and Reliable</h3>
+<img class="plain stretch" src="img/people3.svg"/>
+<p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
+Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
+</section>
+
+<section data-transition="none">
+<h3>Versatile, Open, and Reliable</h3>
 <img class="plain stretch" src="img/people.svg"/>
 <p><small>These slides: <a href="https://tinyurl.com/adecentweb-nanopubs">https://tinyurl.com/adecentweb-nanopubs</a><br>
 Further links: <a href="http://purl.org/nanopub/links">http://purl.org/nanopub/links</a></small></p>
